--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
   min-height: 60vh;
 }
 
+.btn {
+  width: 180px;
+  height: 40px;
+}
+
 .theme-night {
   background-color: #282c34;
   color: white;
