Fix className capitalisation

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-header {
+.app-header {
   min-height: 40vh;
   display: flex;
   flex-direction: column;
