--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 50%;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 input:checked + .slider:before {
